# pytorch-route-choice

./: LICENSE.txt  README.md  pyproject.toml
examples/: maxent_irl_example.py  purc_example.py  recursive_logit.py  recursive_logit_example.py
src/markov/: dataset.py  layers.py  model.py
src/purc/: model.py  utils.py
src/route_choice/: __init__.py
src/route_choice/markov/: __init__.py  dataset.py  layers.py
src/route_choice/markov/models/: __init__.py  nested_recursive_logit.py  recursive_logit.py
src/route_choice/purc/: model.py  utils.py
tests/: conftest.py  fixtures.py  test_incidence.py  test_markov_layers.py  test_markov_model.py  test_nrl_model.py
tests/fixtures/: markov.py
